...
    <string name="close_ad_dismiss">No</string>
    <string name="close_ad_title">Quit Game?</string>
    <string name="close_ad_msg">This game will count on your stats if more than 1 move has been made!!</string>
    <string name="card_cdesc_back">Back of a card</string>
    <string name="card_cdesc_icon">%1$s of %2$s</string>
    <string name="menu_cdesc_close">Close %1$s menu.</string>
    <string name="menu_button_games">Games</string>
    <string name="menu_cdesc_games">Select game.</string>
    <string name="menu_button_rules">Rules</string>
    <string name="menu_cdesc_rules">Game rules.</string>
    <string name="menu_button_stats">Stats</string>
    <string name="menu_cdesc_stats">View stats.</string>
    <string name="menu_cdesc_sync">Sync stats.</string>
...
    <string name="redeal_once">1</string>
    <string name="redeal_unlimited">Unlimited</string>
    <string name="suits_clubs">Clubs</string>
    <string name="suits_diamonds">Diamonds</string>
    <string name="suits_hearts">Hearts</string>
    <string name="suits_spades">Spades</string>
    <string name="games_ad_confirm">Yes</string>
    <string name="games_ad_dismiss">No</string>
    <string name="games_ad_title">Switch games?</string>
    <string name="games_ad_msg">A game has already been started, are you sure you want to switch games?\n\nThis game will count on your stats if more than 1 move has been made!!</string>
    <string name="stats_personal">Personal</string>
    <string name="stats_cdesc_ddm">Expand or collapse.</string>
    <string name="stats_games_played">Games Played</string>
    <string name="stats_global">Global</string>
    <string name="stats_label_ddm">Game</string>
...
